# gpu-burn

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  compare.cu  cube_code.scad  gpu-burn.8  gpu_burn-drv.cpp  pin.scad
.github/workflows/: upload-ecr.yml
win/: .gitignore  CMakeLists.txt  README.md  build.bat  compare.cu  context.md  gpu_burn-drv.cpp
